--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- body - lo que el usuarix ve -->
 <body>
 <!-- header que contiene navegación -->
+ <!-- comentario itzel -->
     <header>
         <nav>
             <!-- ul - lista no ordenada -->
