--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <!-- header que contiene navegación -->
  <!-- comentario itzel -->
+ <!-- comentario guadalupe --> 
     <header>
         <nav>
             <!-- ul - lista no ordenada -->
