--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <!-- body - lo que el usuarix ve -->
 <!-- guadalupe -->
- <!-- itzel -->
+ <!-- itzel1 -->
 <body>
 <!-- header que contiene navegación -->
     <header>
