--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <!-- body - lo que el usuarix ve -->
+ <!-- itzel -->
 <body>
 <!-- header que contiene navegación -->
     <header>
