linea duplicada itz

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <!-- body - lo que el usuarix ve -->
  <!-- body - lo que el usuarix ve -->
+  <!-- body - lo que el usuarix ve itz-->
 <body>
 <!-- header que contiene navegación --> 
     <header>
