--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- body - lo que el usuarix ve -->
  <!-- body - lo que el usuarix ve -->
   <!-- body - lo que el usuarix ve itz-->
+  <!-- ultima prueba guadalupe -->
 <body>
 <!-- header que contiene navegación --> 
     <header>
