--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <!-- body - lo que el usuarix ve -->
   <!-- body - lo que el usuarix ve itz-->
   <!-- ultima prueba guadalupe -->
-   <!--itzel -->
+   <!--itzel 2-->
 <body>
 <!-- header que contiene navegación --> 
     <header>
